--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+     <link rel="shortcut icon" type="x-icon" href="https://img.icons8.com/?size=100&id=OOZ03zZyUcSR&format=png&color=000000">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Password Generator</title>
     <link rel="stylesheet" href="style.css">
